fixed horizontal scroll

--- a/main.css
+++ b/main.css
@@ -78,14 +78,13 @@ header {
 
 .hero {
     position: relative;
-    width: 100vw;
-    height: 1280px;
-
+    width: 100%;
+    height: 100%;
 }
 
 .hero-content {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
